# mlb-pitcher-xK

./: .pre-commit-config.yaml  LICENSE  README.html  README.md  codespell-ignore-words.txt  pyproject.toml
.github/workflows/: test-suite.yml
data/: player_ids.json  supplemental-stats.csv  test.csv  train.csv
models/: linear.joblib  xgboost.joblib
notebooks/: 00-data-scrape-example.ipynb  01-data-processing.ipynb  01a-data-processing-fixing-names.ipynb  01b-data-processing-merging.ipynb  02-data-partitioning.ipynb  03-feature-engineering.ipynb  03-modeling.ipynb  04b-modeling-time-series-cv.ipynb  scratch.ipynb
notebooks/html/: 00-data-scrape-example.html  01a-data-processing-fixing-names.html  01b-data-processing-merging.html  02-data-partitioning.html  03-feature-engineering.html  04b-modeling-time-series-cv.html
src/bullpen/: cv_utils.py  data_utils.py  model_utils.py  plot_utils.py
tests/: test_cv_utils.py  test_data_utils.py  test_model_utils.py  test_plot_utils.py
