[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bullpen"
version = "0.1.0"
authors = [
  { name="loganthomas", email="logan.thomas005@gmail.com" },
]
description = "Predicting Pitcher's Expected K%"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "ftfy",
    "jupyterlab",
    "matplotlib",
    "numpy==1.26.4",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
    "requests",
    "responses",
    "rich",
    "scikit-learn",
    "tensorflow",
    "xgboost==1.7.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""


[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report term-missing --color=yes --disable-warnings"
